classic: bit type
Signed-off-by: Alex Dubov <oakad@yahoo.com>